tons of bottom drawer/project updates

--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -17,7 +17,20 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
+        <View
+            android:id="@+id/bottomSheetDim"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:alpha="0.0"
+            android:background="@color/bottomsheetdim"
+            android:elevation="0dp" />
+
         <include layout="@layout/bottom_sheet_layout" />
+
+        <ViewStub
+            android:id="@+id/cab_stub"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
 
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
