--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -30,5 +30,6 @@
 
     <color name="slate_black">#333333</color>
     <color name="white">#FFFFFF</color>
+    <color name="bottomsheetdim">#d4000000</color>
 
 </resources>
