--- a/app/src/main/res/layout/project_switcher_item.xml
+++ b/app/src/main/res/layout/project_switcher_item.xml
@@ -27,13 +27,26 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="8dp"
-        android:tint="@color/cyanea_selector_default"
-        android:tintMode="src_atop"
         app:layout_constraintBottom_toTopOf="@+id/project_text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_dot_black_24dp" />
+        app:srcCompat="@drawable/ic_dot_black_24dp"
+        android:outlineProvider="background"/>
+
+    <TextView
+        android:id="@+id/project_task_count"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="2dp"
+        android:text="#"
+        android:textColor="@color/white"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@+id/project_circle"
+        app:layout_constraintEnd_toEndOf="@+id/project_circle"
+        app:layout_constraintStart_toStartOf="@+id/project_circle"
+        app:layout_constraintTop_toTopOf="@+id/project_circle" />
 
     <ImageView
         android:id="@+id/project_add_icon"
