project logic improvements, bottom sheet animation improvements, preparing for internal release

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,4 +39,10 @@
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
+    <me.saket.inboxrecyclerview.page.ExpandablePageLayout
+        android:id="@+id/expandable_page_archive"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:elevation="72dp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
