--- a/app/src/main/res/layout/project_create_edit_layout.xml
+++ b/app/src/main/res/layout/project_create_edit_layout.xml
@@ -33,7 +33,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
+        <com.andb.apps.todo.views.CyaneaTextView
             android:id="@+id/projectColorText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
