--- a/app/src/main/res/layout/project_switcher_item.xml
+++ b/app/src/main/res/layout/project_switcher_item.xml
@@ -38,7 +38,8 @@
         android:id="@+id/project_task_count"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="2dp"
+        android:paddingTop="1dp"
+        android:paddingEnd="1dp"
         android:text="#"
         android:textColor="@color/white"
         android:textSize="24sp"
