--- a/app/src/main/res/layout/inbox_list_item.xml
+++ b/app/src/main/res/layout/inbox_list_item.xml
@@ -55,6 +55,8 @@
         android:layout_marginBottom="4dp"
         app:layout_constraintBottom_toTopOf="@+id/list_divider"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
 
