--- a/app/src/main/res/layout/inbox_checklist_list_item.xml
+++ b/app/src/main/res/layout/inbox_checklist_list_item.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/listTextView"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
 
     android:paddingStart="8dp"
