--- a/app/src/main/res/layout/inbox_list_item.xml
+++ b/app/src/main/res/layout/inbox_list_item.xml
@@ -23,6 +23,7 @@
         android:visibility="visible"
         app:cyaneaIconBackground="background"
         app:layout_constraintBottom_toBottomOf="@+id/topLayout"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/topLayout" />
 
     <com.andb.apps.todo.views.ItemViewTitleTags
@@ -63,7 +64,6 @@
 
     <androidx.appcompat.widget.AppCompatCheckBox
         android:id="@+id/item1"
-        layout="@layout/inbox_checklist_list_item"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
@@ -77,7 +77,6 @@
 
     <androidx.appcompat.widget.AppCompatCheckBox
         android:id="@+id/item2"
-        layout="@layout/inbox_checklist_list_item"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
@@ -91,7 +90,6 @@
 
     <androidx.appcompat.widget.AppCompatCheckBox
         android:id="@+id/item3"
-        layout="@layout/inbox_checklist_list_item"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
@@ -115,12 +113,13 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/item3" />
 
-        <Space
-            android:id="@+id/listitempadding"
-            android:layout_width="wrap_content"
-            android:layout_height="12dp"
-            android:visibility="visible"
-            app:layout_constraintBottom_toTopOf="@+id/list_divider" />
+    <Space
+        android:id="@+id/listitempadding"
+        android:layout_width="wrap_content"
+        android:layout_height="12dp"
+        android:visibility="visible"
+        app:layout_constraintBottom_toTopOf="@+id/list_divider"
+        app:layout_constraintStart_toStartOf="parent" />
 
         <View
             android:id="@+id/list_divider"
