--- a/app/src/main/res/layout/tag_list_item.xml
+++ b/app/src/main/res/layout/tag_list_item.xml
@@ -1,33 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:custom="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:custom="http://schemas.android.com/apk/res-auto"
-    >
+    android:orientation="horizontal">
 
-    <LinearLayout
-        android:layout_width="match_parent"
+
+    <com.andb.apps.todo.views.CyaneaTextView
+        android:id="@+id/tagname"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_weight="1"
+        android:padding="16dp"
+        android:text="TagName"
+        custom:cyaneaTextBackground="background" />
 
-        <com.andb.apps.todo.views.CyaneaTextView
-            android:id="@+id/tagname"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:padding="16dp"
-            custom:cyaneaTextBackground="background"
-            android:text="TagName" />
-
-        <ImageView
-            android:id="@+id/tagIcon"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_marginEnd="16dp"
-            android:layout_weight="1"
-            android:scaleType="fitEnd"
-            app:srcCompat="@drawable/ic_label_black_24dp" />
-    </LinearLayout>
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <ImageView
+        android:id="@+id/tagIcon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:layout_marginEnd="16dp"
+        android:layout_weight="1"
+        android:scaleType="fitEnd"
+        app:srcCompat="@drawable/ic_label_black_24dp" />
+</LinearLayout>
