--- a/app/src/main/res/layout/add_task_list_item.xml
+++ b/app/src/main/res/layout/add_task_list_item.xml
@@ -1,20 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/taskListItem"
+    android:id="@+id/addTaskListItem"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_marginTop="8dp"
+    android:orientation="horizontal">
 
 
     <ImageView
         android:id="@+id/removeListItem"
-        android:layout_width="24dp"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_alignParentEnd="true"
         android:layout_centerVertical="true"
-        android:layout_marginBottom="16dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
         android:layout_weight="0"
         android:tint="@android:color/darker_gray"
         android:visibility="visible"
@@ -25,10 +27,10 @@
 
     <EditText
         android:id="@+id/taskItemEditText"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginEnd="28dp"
-        android:layout_marginStart="12dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
         android:layout_weight="0"
         android:singleLine="false"
         android:textSize="14sp"
@@ -39,4 +41,4 @@
         app:layout_constraintTop_toTopOf="@+id/removeListItem" />
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
