--- a/app/src/main/res/layout/task_view_tag_list_item.xml
+++ b/app/src/main/res/layout/task_view_tag_list_item.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:padding="2dp">
+    android:orientation="horizontal"
+    android:padding="8dp">
 
     <ImageView
         android:id="@+id/tagImage"
@@ -22,9 +23,10 @@
         android:id="@+id/task_view_item_tag_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
         android:text="Tag Name"
+        app:cyaneaTextBackground="background"
         app:layout_constraintBottom_toBottomOf="@+id/tagImage"
         app:layout_constraintLeft_toRightOf="@+id/tagImage"
-        app:layout_constraintTop_toTopOf="@+id/tagImage"
-        app:cyaneaTextBackground="background"/>
-</androidx.constraintlayout.widget.ConstraintLayout>
+        app:layout_constraintTop_toTopOf="@+id/tagImage" />
+</LinearLayout>
