--- a/app/src/main/res/layout/fragment_browse.xml
+++ b/app/src/main/res/layout/fragment_browse.xml
@@ -47,16 +47,18 @@
                         android:id="@+id/browseCardHeader"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:background="?android:attr/selectableItemBackground">
+                        android:background="?android:attr/selectableItemBackground"
+                        app:layout_constraintTop_toTopOf="parent">
 
                         <com.andb.apps.todo.views.CyaneaIcon
                             android:id="@+id/browseHeaderIcon"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:alpha=".54"
                             android:padding="16dp"
                             android:src="@drawable/ic_folder_black_24dp"
                             app:layout_constraintBottom_toBottomOf="parent"
-                            android:alpha=".54"
+                            app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="parent" />
 
                         <com.andb.apps.todo.views.CyaneaIcon
@@ -80,8 +82,8 @@
                             android:rotation="180"
                             android:src="@drawable/ic_add_black_24dp"
                             app:layout_constraintBottom_toBottomOf="parent"
-                            app:layout_constraintTop_toTopOf="parent"
                             app:layout_constraintEnd_toStartOf="@id/tagCollapseButton"
+                            app:layout_constraintTop_toTopOf="parent"
                             tools:layout_editor_absoluteX="328dp" />
 
 
@@ -104,8 +106,7 @@
                 android:layout_marginTop="12dp"
                 android:layout_marginBottom="@dimen/rv_padding_for_bottom_bar"
                 android:layoutAnimation="@anim/rv_slide_from_bottom_layout_anim"
-                app:layout_constraintTop_toBottomOf="@+id/browseTagCardHolder"
-                android:windowSoftInputMode="adjustNothing"/>
+                app:layout_constraintTop_toBottomOf="@+id/browseTagCardHolder" />
 
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
