--- a/app/src/main/res/layout/fragment_inbox.xml
+++ b/app/src/main/res/layout/fragment_inbox.xml
@@ -35,16 +35,15 @@
             <include
                 layout="@layout/inbox_header"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                />
 
             <me.saket.inboxrecyclerview.InboxRecyclerView
                 android:id="@+id/inboxRecycler"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_gravity="center_vertical|center_horizontal"
                 android:layout_marginBottom="@dimen/rv_padding_for_bottom_bar"
-                android:layoutAnimation="@anim/rv_slide_from_bottom_layout_anim"
-                android:windowSoftInputMode="adjustNothing">
+                android:layoutAnimation="@anim/rv_slide_from_bottom_layout_anim">
 
 
             </me.saket.inboxrecyclerview.InboxRecyclerView>
