--- a/app/src/main/res/layout/inbox_header.xml
+++ b/app/src/main/res/layout/inbox_header.xml
@@ -2,17 +2,19 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:focusableInTouchMode="true">
 
     <com.andb.apps.todo.views.CyaneaTextView
         android:id="@+id/task_count_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingTop="48dp"
+        android:layout_marginTop="48dp"
         android:text="# TASKS"
         android:textSize="36sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <com.andb.apps.todo.views.CyaneaTextView
         android:id="@+id/task_path_text"
