--- a/app/src/main/res/layout/tag_list_item.xml
+++ b/app/src/main/res/layout/tag_list_item.xml
@@ -4,6 +4,7 @@
     xmlns:custom="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="horizontal">
 
 
@@ -13,7 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:padding="16dp"
-        android:text="TagName"
+        tools:text="TagName"
         custom:cyaneaTextBackground="background" />
 
     <ImageView
