--- a/app/src/main/res/layout/view_reminder_picker.xml
+++ b/app/src/main/res/layout/view_reminder_picker.xml
@@ -15,7 +15,10 @@
             android:id="@+id/reminderPickerTitle"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:padding="16dp"
+            android:paddingStart="16dp"
+            android:paddingTop="22dp"
+            android:paddingEnd="16dp"
+            android:paddingBottom="20dp"
             android:text="@string/reminder_picker_title"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
