--- a/app/src/main/res/layout/browse_tag_list_item.xml
+++ b/app/src/main/res/layout/browse_tag_list_item.xml
@@ -34,11 +34,13 @@
         android:id="@+id/browseRemoveImage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingBottom="12dp"
         android:paddingStart="12dp"
         android:paddingTop="12dp"
+        android:paddingBottom="12dp"
         android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_remove_circle_black_24dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
