--- a/app/src/main/res/layout/content_tag_select.xml
+++ b/app/src/main/res/layout/content_tag_select.xml
@@ -11,5 +11,8 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/tagrecycler"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
